--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
   },
+  "scripts": {
+    "start": "nodemon script.js"
+  },
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
